# enterprise-ai-db

./: .env.example  .gitignore  API_IMPLEMENTATION_VERIFICATION.md  BANDIT_FIXES_PHASE11.md  COMPUTE_AI_ACCESS_SUMMARY.md  DEMO_SCRIPT.md  MIGRATION_VERIFICATION.md  Makefile  PERMISSION_SERVICE_PATCH.md  PHASE_0_REPORT.md  PHASE_10_REPORT.md  PHASE_11_PRIORITY_1_2_REPORT.md  PHASE_11_REPORT.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PHASE_5_REPORT.md  PHASE_6_REPORT.md  PHASE_7_MANUAL_PATCH.md  PHASE_7_REPORT.md  PHASE_8_REPORT.md  PHASE_9_QUICKSTART.md  PHASE_9_REPORT.md  PHASE_9_SIMPLIFICATIONS.md  QUICKSTART.md  README.md  SCHEMA_COMPATIBILITY.md  SECURITY.md  SECURITY_AUDIT_PHASE11.md  SECURITY_FIXES_SUMMARY.md  WORKFLOW_ENGINE_MODIFICATION.md  ZOD_INTEGRATION_REPORT.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  modify_workflow_direct.py
backend/: Dockerfile  PHASE_1_REPORT.md  alembic.ini  bandit_report.txt  modify_workflow.py  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/ai/: __init__.py  agent.py  embeddings.py  guardrails.py  indexer.py  prompts.py  retriever.py  tools.py
backend/app/api/: ai.py  approvals.py  audit.py  auth.py  datasets.py  departments.py  records.py  roles.py  users.py  workflow.py  ws.py
backend/app/db/: __init__.py  base.py  rls.py  session.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  ai_conversation.py  audit_log.py  base_model.py  dataset.py  department.py  record.py  role.py  tenant.py  user.py  workflow.py
backend/app/realtime/: __init__.py  redis_bus.py  ws_manager.py
backend/app/schemas/: __init__.py  ai_conversation.py  audit_log.py  dataset.py  record.py  workflow.py
backend/app/scripts/: __init__.py  seed_demo.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  dataset_service.py  permission_service.py  record_service.py  workflow_engine.py
backend/app/utils/: __init__.py  errors.py  filter_parser.py  hashing.py  jsonschema.py  jwt.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_init.py  0002_rls.py  0003_seed_permissions.py  0004_add_datasets.py  0005_add_records.py  (+6 more)
backend/tests/: conftest.py  test_ai_security.py  test_auth.py  test_health.py  test_permissions.py  test_records.py  test_schema_compatibility.py  test_security_contracts.py  test_workflow.py
(+43 files in other folders)
