[project]
name = "enterprise-ai-db"
version = "0.1.0"
description = "Enterprise AI Database — multi-tenant SaaS data platform with permission-aware AI assistant"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "email-validator>=2.0.0",
    "json-logic>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # Validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jsonschema>=4.23",
    # Cache / Queue
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.3",
    # AI
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    # Auth
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    # Observability
    "structlog>=24.0",
    # Rate limiting
    "slowapi>=0.1",
    # HTTP client (internal use)
    "httpx>=0.27",
    # Middleware
    "python-multipart>=0.0.9",
    # Security
    "simpleeval>=0.9.13",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.1",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-jsonschema>=4.23",
    "bandit>=1.9.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "D:DATABASE_URL=postgresql+asyncpg://postgres:postgres_test@postgres-test:5432/enterprise_ai_test",
    "D:REDIS_URL=redis://localhost:6380/0",
    "D:CELERY_BROKER_URL=redis://localhost:6380/1",
    "D:CELERY_RESULT_BACKEND=redis://localhost:6380/2",
    "D:JWT_SECRET_KEY=test-secret-key-do-not-use-in-production",
    "D:JWT_ALGORITHM=HS256",
    "D:LLM_API_KEY=sk-test-placeholder",
    "D:LLM_MODEL=gpt-4o-mini",
    "D:LLM_STRONG_MODEL=gpt-4o",
    "D:EMBED_MODEL=text-embedding-3-small",
    "D:EMBED_DIM=1536",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "ANN"]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.mypy-pydantic]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
